update example env file for postgresql

--- a/pythia/.env.example
+++ b/pythia/.env.example
@@ -6,10 +6,10 @@ ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 TIMEZONE=UTC
 
 #SQL Settings
-SQL_ENGINE=django.db.backends.sqlite3
-SQL_DATABASE=db.sqlite3
-#SQL_ENGINE=django.db.backends.postgresql
-#SQL_DATABASE=dbname
+#SQL_ENGINE=django.db.backends.sqlite3
+#SQL_DATABASE=db.sqlite3
+SQL_ENGINE=django.db.backends.postgresql
+SQL_DATABASE=dbname
 SQL_USER=user
 SQL_PASSWORD=password
 
